add entity update endpoints