@@ -3,7 +3,6 @@ package com.petwellservices.api.service.appointment;
 import java.time.LocalDate;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
@@ -14,7 +13,6 @@ import com.petwellservices.api.dto.SlotDto;
 import com.petwellservices.api.entities.Groomer;
 import com.petwellservices.api.entities.GroomerAppointment;
 import com.petwellservices.api.entities.Pet;
-import com.petwellservices.api.entities.SitterAppointment;
 import com.petwellservices.api.entities.Slot;
 import com.petwellservices.api.entities.User;
 import com.petwellservices.api.enums.AppointmentStatus;
@@ -30,8 +28,8 @@ import lombok.RequiredArgsConstructor;
 
 @RequiredArgsConstructor
 @Service
-public class GroomerAppointmentService implements IGroomerAppointmentService{
-     private final GroomerAppointmentRepository groomerAppointmentRepository;
+public class GroomerAppointmentService implements IGroomerAppointmentService {
+    private final GroomerAppointmentRepository groomerAppointmentRepository;
 
     private final UserRepository userRepository;
 
@@ -70,7 +68,7 @@ public class GroomerAppointmentService implements IGroomerAppointmentService{
     @Override
     public List<AppointmentsDto> getUserAppointments(Long userId) {
         List<GroomerAppointment> appointments = groomerAppointmentRepository.findByUserUserId(userId);
-        return appointments.stream().map(this::convertToDTO).collect(Collectors.toList());
+        return appointments.stream().map(this::convertToDTO).toList();
     }
 
     private AppointmentsDto convertToDTO(GroomerAppointment appointment) {
@@ -97,8 +95,8 @@ public class GroomerAppointmentService implements IGroomerAppointmentService{
         slotDto.setSlotId(appointment.getSlot().getSlotId());
         slotDto.setSlotTime(appointment.getSlot().getSlotTime());
 
-
-         List<PetDto> petDtos = petRepository.findByUserUserId(appointment.getUser().getUserId()).stream().map(this::convertToDto).toList();
+        List<PetDto> petDtos = petRepository.findByUserUserId(appointment.getUser().getUserId()).stream()
+                .map(this::convertToDto).toList();
         dto.setPet(petDtos);
 
         dto.setAppointmentId(appointment.getId());
@@ -113,11 +111,12 @@ public class GroomerAppointmentService implements IGroomerAppointmentService{
 
     @Override
     public GroomerAppointment getAppointmentDetails(Long appointmentId) {
-        return groomerAppointmentRepository.findById(appointmentId).orElseThrow(()->new ResourceNotFoundException("appointment not found"));
-   
+        return groomerAppointmentRepository.findById(appointmentId)
+                .orElseThrow(() -> new ResourceNotFoundException("appointment not found"));
+
     }
 
-     PetDto convertToDto(Pet pet) {
+    PetDto convertToDto(Pet pet) {
         PetDto petDto = new PetDto();
         petDto.setPetId(pet.getPetId());
         petDto.setPetName(pet.getPetName());
